--- a/text adventure project/changelog.txt
+++ b/text adventure project/changelog.txt
@@ -52,3 +52,5 @@
 - Mr Chen, rat, and D.O.G agent enemies were added
 - Added burger, cigarette, hobo bomb, and milk carton items. 
 - Fixed some text being skipped over when it shouldn't've been. 
+- Added shops
+- Added the rat riddle thing that's technically a puzzle
